--- a/package.json
+++ b/package.json
@@ -12,5 +12,8 @@
     "grunt-contrib-uglify": "~0.2.2",
     "grunt-exec": "~0.4.6",
     "doxstrap": "~0.0.5"
+  },
+  "dependencies": {
+    "text-encoding": "^0.7.0"
   }
 }
